# pulsar-compose

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  README.md  build.spec  docker-compose.yml  install-executable.sh  install.sh  pulsar  pulsar.rb  pyproject.toml  test_ollama.py  update-homebrew-formula.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  release.yml
agents/: __init__.py  anthropic_agent.py  base.py  config.py  factory.py  local_agent.py  openai_agent.py
cli/: __init__.py  config.py  history.py  main.py  plugins.py  progress.py
docs/: architecture.html  architecture.rst  conf.py  configuration.html  configuration.rst  contributing.html  contributing.rst  genindex.html  index.html  installation.html  installation.rst  objects.inv  py-modindex.html  quickstart.html  quickstart.rst  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/agents/: anthropic_agent.html  base.html  config.html  factory.html  local_agent.html  openai_agent.html
docs/_modules/cli/: config.html  history.html  plugins.html  progress.html
docs/_modules/engine/: executor.html  expression_evaluator.html  results.html
docs/_modules/models/: state.html  template.html
docs/_sources/: index.rst.txt
docs/_sources/user_guide/: workflows.rst.txt
docs/api_reference/: index.html  index.rst
docs/user_guide/: workflows.html
engine/: __init__.py  executor.py  expression_evaluator.py  results.py
engine/input_providers/: __init__.py  base.py  console.py  file.py  test.py  web.py
engine/step_handlers/: __init__.py  agent_handler.py  base.py  condition_handler.py  interaction_handler.py
examples/: CODE_REVIEW.yml  CONDITIONAL_REVIEW.yml  CREATIVE_WRITING.yml  CUSTOMER_SUPPORT.yml  DATA_ANALYSIS.yml  README.md  RESEARCH_ANALYSIS.yml  SIMPLE_CHAIN.yml  TECH_STACK_BUILDER.yml  USER_INTERACTION.yml  conditional_workflow.yml  simple_chain.yml
examples/docs/: CONDITIONAL_REVIEW.md  SIMPLE_CHAIN.md  TECH_STACK_BUILDER.md
examples/templates/: basic_sequential.yml  conditional_branching.yml  multi_agent_collaboration.yml
examples/test_data/: README.md  sample_inputs.txt  validate_workflows.py
models/: state.py  template.py  workflow.py
tests/: conftest.py  mocks.py  test_agents.py  test_cli.py  test_e2e.py  test_executor.py  test_expression_evaluator.py  test_input_providers.py  test_integration.py  test_models.py  test_performance.py  test_state.py
